<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.icd10_version2010.EstatisticasActivity" >

    <LinearLayout
        android:id="@+id/LinearLayoutTotalTempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/rAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTempoTotal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTempoTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTempoTotalValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutCapitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/txtTempoResp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLeituraCapitulos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLeituraCapValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLeituraCapitulosValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutBlocos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLeituraBlocos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLeituraBlocoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLeituraBlocosValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"  >

        <TextView
            android:id="@+id/txtNRespC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLeituraCodigos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLeituraCodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLeituraCodigosValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTotalItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"  >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalItems"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalItemsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalItemsValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTotalCapitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/txtTotalCapitulos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCapitulosValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/txtTotalCapitulosValue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTotalBlocos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"  >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalBloco"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalBlocosValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTotalCodigos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"  >

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalCodigos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCodigosValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalBlocosValue" />
    </LinearLayout>

</LinearLayout>