<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.icd10_version2010.TrainingActivity" >

    <ViewFlipper
        android:id="@+id/viewFlipperTraining"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <LinearLayout
            android:id="@+id/flipComecar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/questiont"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_tutorial_inciotrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="Tutorial"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_texto_tutorial_iniciotrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:paddingLeft="9dp"
                android:paddingRight="8dp"
                android:text="Para as seguintes questões selecione o código ou descrição correcto. Bom Treino!"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btn_Iniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:text="@string/btn_ComecarTraining" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/flipQuestoes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_Pergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="TextView"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radioQuestoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txt_Pergunta"
                android:layout_marginTop="5dp" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radiobtn0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtn3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_pergSeguinte"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/radioQuestoes"
                android:layout_marginTop="50dp"
                android:text="@string/btn_PergSeguinte" />

            <Button
                android:id="@+id/btn_terminarTraining"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_pergSeguinte"
                android:layout_alignBottom="@+id/btn_pergSeguinte"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/btn_pergSeguinte"
                android:text="@string/btn_terminarTrain" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/flipFeedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_sair_quizz"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/btn_sair_quizz" />

            <TextView
                android:id="@+id/txt_titulo_estatistiscasquizz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/titulo_estatisticas_treino"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txt_titulo_estatistiscasquizz"
                android:layout_marginTop="34dp"
                android:columnCount="2"
                android:rowCount="5"
                android:useDefaultMargins="true" >
                
                <TextView
                    android:id="@+id/txt_score_estatistiscasquizz"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Score:"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txt_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="x"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txt_nRespCert_estatistiscasquizz"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Nº Respostas Corretas:"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtNRespC_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="x"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txt_nRespApres_estatistiscasquizz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Nº Respostas Apresentadas:"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtNRespAp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="x"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txt_tMelhor_Resp_estatistiscasquizz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Tempo Melhor Resposta:"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtTMResp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="x"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txt_tempMedioResp_estatistiscasquizz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Tempo Médio Resposta:"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtTMedioR_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="x"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txt_tempTotal_estatistiscasquizz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Tempo Total Sessão:"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtTtotalS_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="x"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </GridLayout>
        </RelativeLayout>
    </ViewFlipper>

</RelativeLayout>